[gd_scene load_steps=9 format=3 uid="uid://dcnjabyfgy3tm"]

[ext_resource type="Script" path="res://game/UI/hud.gd" id="1_g4rpk"]
[ext_resource type="Texture2D" uid="uid://dtlw6h7tp6myv" path="res://assets/ui/ammo_types/shotgun_shell.png" id="2_6i720"]
[ext_resource type="Theme" uid="uid://dbbvkkfy25ldu" path="res://assets/themes/text.tres" id="2_68nfx"]
[ext_resource type="Texture2D" uid="uid://d4lx7mqd0g5nh" path="res://assets/ui/checkbox1.png" id="4_fopok"]
[ext_resource type="PackedScene" uid="uid://b7tlk72uaaatj" path="res://game/UI/primary_objective_label.tscn" id="4_kj66g"]
[ext_resource type="Texture2D" uid="uid://cjocwybbd0qxm" path="res://assets/ui/healthbottom.png" id="5_f2ved"]
[ext_resource type="Texture2D" uid="uid://cats31d6vmo5o" path="res://assets/ui/healthtop.png" id="6_7t315"]
[ext_resource type="PackedScene" uid="uid://ci8mbyjapxbgq" path="res://game/UI/extract_objective_label.tscn" id="6_eybuc"]

[node name="HUD" type="Control" groups=["hud"]]
texture_filter = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4rpk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Ammo_Container" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -83.0
offset_right = 102.0
offset_bottom = 55.0
grow_vertical = 0
scale = Vector2(0.6, 0.6)
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Ammo_Container"]
layout_mode = 2

[node name="AmmoSprite" type="TextureRect" parent="CanvasLayer/Ammo_Container/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_6i720")
stretch_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Ammo_Container/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_68nfx")
text = "1/1"

[node name="Objective_Container" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_bottom = 90.0
grow_horizontal = 0
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Objective_Container"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Objective_Container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_68nfx")
text = "Objectives:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrimaryObjectiveLabel" parent="CanvasLayer/Objective_Container/VBoxContainer" instance=ExtResource("4_kj66g")]
layout_mode = 2

[node name="OptionalObjective" type="HBoxContainer" parent="CanvasLayer/Objective_Container/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Objective_Container/VBoxContainer/OptionalObjective"]
layout_mode = 2
texture = ExtResource("4_fopok")
stretch_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Objective_Container/VBoxContainer/OptionalObjective"]
layout_mode = 2
theme = ExtResource("2_68nfx")
theme_override_font_sizes/font_size = 8
text = "test"

[node name="ExtractObjectiveLabel" parent="CanvasLayer/Objective_Container/VBoxContainer" instance=ExtResource("6_eybuc")]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 3
offset_right = 162.0
offset_bottom = 52.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
max_value = 3.0
value = 3.0
texture_under = ExtResource("5_f2ved")
texture_progress = ExtResource("6_7t315")

[node name="Secret_container" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Secret_container"]
layout_mode = 2

[node name="SecretLabel" type="Label" parent="CanvasLayer/Secret_container/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_68nfx")
theme_override_font_sizes/font_size = 8
text = "SECRET FOUND"

[node name="TimerContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TimerContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer/TimerContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_68nfx")
theme_override_font_sizes/font_size = 8
text = "TIME TO EXTRACT:"

[node name="SecretTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="SecretTimer" to="." method="_on_secret_timer_timeout"]
